--- a/TNM/MainWindow.xaml
+++ b/TNM/MainWindow.xaml
@@ -1,12 +1,14 @@
 ﻿<Window x:Class="TNM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TNM"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF">
+    <Window.DataContext>
+        <local:ViewModel />
+    </Window.DataContext>
+
+    <lvc:CartesianChart
+        Series="{Binding Series}">
+    </lvc:CartesianChart>
+
 </Window>
