--- a/TNM/MainWindow.xaml
+++ b/TNM/MainWindow.xaml
@@ -2,13 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:TNM"
-        xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF">
-    <Window.DataContext>
-        <local:ViewModel />
-    </Window.DataContext>
+        xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
+        Title="Window1" Height="450" Width="800">
 
-    <lvc:CartesianChart
-        Series="{Binding Series}">
-    </lvc:CartesianChart>
+
+    <Window.DataContext>
+            <local:ViewModel />
+        </Window.DataContext>
+    <Grid>
+        <lvc:CartesianChart
+            Series="{Binding Series}">
+        </lvc:CartesianChart>
+    </Grid>
 
 </Window>
+    
