--- a/TNM/Auth/Authorization.xaml
+++ b/TNM/Auth/Authorization.xaml
@@ -6,7 +6,10 @@
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:local="clr-namespace:TNM.Auth"
         mc:Ignorable="d"
-        Height="500" Width="450" Background="Black" WindowStartupLocation="CenterScreen">
+        Height="500"
+        Width="400"
+        Background="Black"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Name="HeaderRow" Height="*"/>
@@ -16,10 +19,10 @@
             <RowDefinition Name="FooterRow" Height="*"/>
         </Grid.RowDefinitions>
         <ui:TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="TNM" FontSize="25" Foreground="#AD0057" FontWeight="Bold"/>
-        <ui:TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="20" Foreground="#9F9F9F"/>
-        <ui:TextBox Grid.Row="2" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="25"/>
-        <ui:PasswordBox Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="25"/>
-        <ui:Button Grid.Row="4" HorizontalAlignment="Center" Width="250" Height="70" VerticalAlignment="Center" Content="Войти" Foreground="White"/>
+        <ui:TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="20" Foreground="#FFFFFF"/>
+        <ui:TextBox Grid.Row="2" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите логин               "/>
+        <ui:PasswordBox Grid.Row="3" HorizontalAlignment="Center" Width="200" Height="40" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите пароль     "/>
+        <ui:Button Grid.Row="4" HorizontalAlignment="Center" Width="250" Height="70" VerticalAlignment="Center" Content="Войти" Foreground="White" FontWeight="Bold"/>
         <!--<ui:TextBox Grid.Row="0" >Логин</ui:TextBox>-->
     </Grid>
 </Window>
