--- a/TNM/Auth/Authorization.xaml
+++ b/TNM/Auth/Authorization.xaml
@@ -10,7 +10,9 @@
         Width="400"
         Background="Black"
         WindowStartupLocation="CenterScreen" 
-        Topmost="True" WindowStyle="None"
+        Topmost="True" 
+        WindowStyle="None"
+        MinHeight="500"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -40,7 +42,6 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <!-- Text Block for "TNM" -->
             <ui:TextBlock Foreground="MediumVioletRed" Text="TNM" FontSize="48" FontWeight="Bold"/>
-
             <!-- Icon next to the TextBlock with scaling applied using Viewbox -->
             <Viewbox Width="50" Height="50" Margin="0,6,0,0">
                 <ui:SymbolIcon Symbol="CalendarRtl48" Filled="True">
@@ -57,7 +58,20 @@
         <ui:TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="15" Foreground="#a59b99"/>
         <ui:TextBox Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите логин               "/>
         <ui:PasswordBox Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите пароль     "/>
-        <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Center" Content="Войти" Foreground="White" FontWeight="Bold"/>
+        <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,10,0,0">
+            <Viewbox>
+                <ui:TextBlock>
+                    Войти
+                </ui:TextBlock>
+            </Viewbox>
+        </ui:Button>
+        <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,72,0,0">
+            <Viewbox>
+                <ui:TextBlock>
+                    Регистрация
+                </ui:TextBlock>
+            </Viewbox>
+        </ui:Button>
         <!--<ui:NavigationView Grid.Row="1" x:Name="RootNavigation"></ui:NavigationView>-->
         <!--<ui:TextBox Grid.Row="0" >Логин</ui:TextBox>-->
     </Grid>
