--- a/TNM/Auth/Registration.xaml
+++ b/TNM/Auth/Registration.xaml
@@ -6,7 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d"
-      Height="400"
+      Height="470"
       Width="400"
       Background="Black"
       WindowStartupLocation="CenterScreen" 
@@ -21,6 +21,7 @@
           <RowDefinition Name="BodyRow1" Height="0.05*"/>
           <RowDefinition Name="BodyRow2" Height="0.05*"/>
           <RowDefinition Name="BodyRow3" Height="0.05*"/>
+          <RowDefinition Name="BodyRow4" Height="0.05*"/>
           <RowDefinition Name="FooterRow" Height="0.12*"/>
       </Grid.RowDefinitions>
       <DockPanel Background="#333333" Height="35" MouseDown="TitleBar_MouseDown">
@@ -49,15 +50,16 @@
               </ui:SymbolIcon>
           </Viewbox>
       </StackPanel>
-      <ui:TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="15" Foreground="#a59b99"/>
+      <ui:TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Зарегистрируйтесь, чтобы продолжить" FontSize="15" Foreground="#a59b99"/>
       <ui:TextBox Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите логин               "/>
-      <ui:PasswordBox Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите пароль     "/>
-      <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,10,0,0">
+        <ui:TextBox Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите почту               "/>
+        <ui:PasswordBox Grid.Row="5" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите пароль     "/>
+      <ui:Button Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,10,0,0">
           <Viewbox>
                 <ui:TextBlock Text="Зарегистрироваться"/>
             </Viewbox>
       </ui:Button>
-      <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,72,0,0">
+      <ui:Button Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="50" VerticalAlignment="Top" Margin="0,72,0,0">
           <Viewbox>
                 <ui:TextBlock Text="Назад"/>
             </Viewbox>
