--- a/TNM/Auth/Authorization.xaml
+++ b/TNM/Auth/Authorization.xaml
@@ -19,10 +19,10 @@
                 <ui:Button Style="{StaticResource WindowControlButtonStyle}" Click="Minimize_Click">
                     <ui:SymbolIcon Symbol="ArrowMinimize20" FontSize="20"/>
                 </ui:Button>
-                <ui:Button Style="{StaticResource WindowControlButtonStyle}" Click="Maximize_Click" Margin="1,0,0,0">
+                <ui:Button Style="{StaticResource WindowControlButtonStyle}" Click="Maximize_Click">
                     <ui:SymbolIcon Symbol="FullScreenMaximize20" FontSize="20"/>
                 </ui:Button>
-                <ui:Button Style="{StaticResource WindowControlButtonStyle}" Foreground="Red" Click="Close_Click" Margin="1,0,0,0">
+                <ui:Button Style="{StaticResource WindowControlButtonStyle}" Foreground="Red" Click="Close_Click">
                     <ui:SymbolIcon Symbol="ArrowExit20" FontSize="20"/>
                 </ui:Button>
             </StackPanel>
@@ -58,19 +58,19 @@
                 <ui:TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="12" Foreground="#a59b99" Margin="0,0,0,5"/>
 
                 <!-- Поле для логина -->
-                <ui:TextBox Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите логин" Margin="0,5,0,5"/>
+                <ui:TextBox Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите логин               " Margin="0,5,0,0"/>
 
                 <!-- Поле для пароля -->
                 <ui:PasswordBox Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите пароль" Margin="0,5,0,5"/>
 
                 <!-- Кнопки входа и регистрации -->
-                <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="45" VerticalAlignment="Top" Margin="0,5,0,0">
+                <ui:Button Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,5,0,0">
                     <Viewbox>
                         <ui:TextBlock Text="Войти"/>
                     </Viewbox>
                 </ui:Button>
 
-                <ui:Button Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="45" VerticalAlignment="Top" Margin="0,55,0,5">
+                <ui:Button Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,50,0,5">
                     <Viewbox>
                         <ui:TextBlock Text="Регистрация"/>
                     </Viewbox>
