--- a/TNM/Styles/ButtonStyle.xaml
+++ b/TNM/Styles/ButtonStyle.xaml
@@ -9,15 +9,23 @@
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="Background" Value="#333333"/>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#2a2a2a"/>
-                <!-- немного темнее для эффекта -->
-            </Trigger>
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#1f1f1f"/>
-                <!-- еще чуть темнее при нажатии -->
-            </Trigger>
-        </Style.Triggers>
+        <!-- Определение ControlTemplate для изменения фона на событие -->
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ui:Button">
+                    <Grid Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#2a2a2a"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Background" Value="#1f1f1f"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
