--- a/TNM/Menu/MainMenu.xaml
+++ b/TNM/Menu/MainMenu.xaml
@@ -40,8 +40,8 @@
         <!-- NavigationView с кнопками и областью отображения контента -->
         <ui:NavigationView Grid.Row="1" IsPaneOpen="False" IsBackButtonVisible="Collapsed">
             <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem x:Name="DashboardItem" Content="Проекты" Icon="{ui:SymbolIcon Home24}" TargetPageType="{x:Type pages:ProjectView}"/>
-                <ui:NavigationViewItem x:Name="ItemsItem" Content="Items" Icon="{ui:SymbolIcon Library24}" TargetPageType="{x:Type pages:CreateProject}"/>
+                <ui:NavigationViewItem x:Name="ProjectItem" Content="Проекты" Icon="{ui:SymbolIcon Home24}" TargetPageType="{x:Type pages:ProjectView}"/>
+                <ui:NavigationViewItem x:Name="CreateProjectItem" Content="Создать" Icon="{ui:SymbolIcon Library24}" TargetPageType="{x:Type pages:CreateProject}"/>
             </ui:NavigationView.MenuItems>
             <ui:NavigationView.FooterMenuItems>
                 <ui:NavigationViewItem x:Name="SettingsItem" Content="Settings" Icon="{ui:SymbolIcon Settings24}" TargetPageType="{x:Type pages:Settings}"/>
