--- a/TNM/Pages/ProjectView.xaml
+++ b/TNM/Pages/ProjectView.xaml
@@ -33,24 +33,24 @@
                             </Border>
                             <Border Margin="10" CornerRadius="8" Background="#333333">
                                 <Grid Margin="6">
-                                    <TextBlock 
-                                    Text="{Binding Title}" 
+                                    <TextBox  
+                                    Text="{Binding ProjectName}" 
                                     FontSize="22" 
                                     Foreground="White" 
                                     FontWeight="Bold" 
                                     Margin="0,0,0,10" />
-                                    <TextBlock 
+                                    <TextBox  
                                     Text="{Binding Description}" 
                                     TextWrapping="Wrap" 
                                     FontSize="14" 
                                     Foreground="White" 
                                     Margin="0,40,0,10" />
                                     <Button 
-                                    Content="Редактировать" 
-                                    Foreground="White" 
-                                    Height="40" 
-                                    HorizontalAlignment="Stretch" 
-                                    Margin="0,143,0,0" />
+                                        Content="Редактировать" 
+                                        Foreground="White" 
+                                        Height="40" 
+                                        HorizontalAlignment="Stretch" 
+                                        Margin="0,143,0,0" />
                                 </Grid>
                             </Border>
                         </Grid>
