--- a/TNM/Pages/ProjectView.xaml
+++ b/TNM/Pages/ProjectView.xaml
@@ -33,13 +33,13 @@
                             </Border>
                             <Border Margin="10" CornerRadius="8" Background="#333333">
                                 <Grid Margin="6">
-                                    <TextBox  
+                                    <TextBlock 
                                     Text="{Binding ProjectName}" 
                                     FontSize="22" 
                                     Foreground="White" 
                                     FontWeight="Bold" 
                                     Margin="0,0,0,10" />
-                                    <TextBox  
+                                    <TextBlock 
                                     Text="{Binding Description}" 
                                     TextWrapping="Wrap" 
                                     FontSize="14" 
