Added page for editing project 🛠

--- a/TNM/Menu/MainMenu.xaml
+++ b/TNM/Menu/MainMenu.xaml
@@ -40,11 +40,12 @@
         <!-- NavigationView с кнопками и областью отображения контента -->
         <ui:NavigationView Grid.Row="1" IsPaneOpen="False" IsBackButtonVisible="Collapsed">
             <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem x:Name="DashboardItem" Content="Проекты" Icon="{ui:SymbolIcon Home24}" TargetPageType="{x:Type pages:ProjectView}"/>
-                <ui:NavigationViewItem x:Name="ItemsItem" Content="Создать проект" Icon="{ui:SymbolIcon Add24}" TargetPageType="{x:Type pages:CreateProject}" Cursor="Hand"/>
+                <ui:NavigationViewItem x:Name="ProjectListDashboardButton" Content="Проекты" Icon="{ui:SymbolIcon Home24}" TargetPageType="{x:Type pages:ProjectView}"/>
+                <ui:NavigationViewItem x:Name="CreateProjectDashboardButton" Content="Создать проект" Icon="{ui:SymbolIcon Add24}" TargetPageType="{x:Type pages:CreateProject}" Cursor="Hand"/>
+                <ui:NavigationViewItem x:Name="EditProjectDashboardButton" Content="Редактировать проект (TEST)" Icon="{ui:SymbolIcon Question24}" TargetPageType="{x:Type pages:EditProject}" Cursor="Hand"/>
             </ui:NavigationView.MenuItems>
             <ui:NavigationView.FooterMenuItems>
-                <ui:NavigationViewItem x:Name="SettingsItem" Content="Настройки" Icon="{ui:SymbolIcon Settings24}" TargetPageType="{x:Type pages:Settings}"/>
+                <ui:NavigationViewItem x:Name="SettingsDashboardButton" Content="Настройки" Icon="{ui:SymbolIcon Settings24}" TargetPageType="{x:Type pages:Settings}"/>
             </ui:NavigationView.FooterMenuItems>
         </ui:NavigationView>
     </Grid>
